Got user authentication working

--- a/src/app/hema-events/hema-event-list/hema-event-list.component.html
+++ b/src/app/hema-events/hema-event-list/hema-event-list.component.html
@@ -1,3 +1,5 @@
-<div *ngFor="let hemaEvent of hemaEvents">
-    <hema-event [hemaEvent]="hemaEvent"></hema-event>
+<div class="hel-container">
+  <div *ngFor="let hemaEvent of hemaEvents">
+      <hema-event [hemaEvent]="hemaEvent"></hema-event>
+  </div>
 </div>
