--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">TourneyMan</a>
+      <a class="navbar-brand" routerLink="/">TourneyMan</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -23,10 +23,11 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"
             role="button" aria-haspopup="true" aria-expanded="false">
-            Login <span class="caret"></span>
+            <span [hidden]="loggedIn()">Login</span><span [hidden]="!loggedIn()">{{ loggedInUser() }}</span> <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Login</a></li>
+            <li [hidden]="loggedIn()"><a routerLink="/login">Login</a></li>
+            <li [hidden]="!loggedIn()"><a (click)="logout()">Logout</a></li>
             <li><a href="#">Administration</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Need help?</a></li>
