--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,11 +23,11 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"
             role="button" aria-haspopup="true" aria-expanded="false">
-            <span [hidden]="loggedIn()">Login</span><span [hidden]="!loggedIn()">{{ loggedInUser() }}</span> <span class="caret"></span>
+            <span [hidden]="userService.loggedIn()">Login</span><span [hidden]="!userService.loggedIn()">{{ loggedInUser() }}</span> <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li [hidden]="loggedIn()"><a routerLink="/login">Login</a></li>
-            <li [hidden]="!loggedIn()"><a (click)="logout()">Logout</a></li>
+            <li [hidden]="userService.loggedIn()"><a routerLink="/login">Login</a></li>
+            <li [hidden]="!userService.loggedIn()"><a (click)="logout()">Logout</a></li>
             <li><a href="#">Administration</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Need help?</a></li>
