Testing the GitHub migration

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,4 +1,4 @@
 <div>
-  <h1>Welcome to the temporary home page<span *ngIf="loggedInUser">, {{ loggedInUser }}</span>!</h1>
+  <h1>Welcome to the temporary home page<span *ngIf="loggedInUser">, {{ loggedInUser }}</span>! We are migrating to GitHub!</h1>
   <img src="https://68.media.tumblr.com/e529d1e24db1e6f7e90ee0144b1a9916/tumblr_nwu716yx1D1u9zksro1_1280.jpg" alt="dank hema meme" width="400" height="545">
 </div>
