--- a/src/app/hema-events/hema-event/hema-event.component.html
+++ b/src/app/hema-events/hema-event/hema-event.component.html
@@ -1,8 +1,3 @@
 <div>
-  <h2 class="title-and-date-line">
-    <span>{{ hemaEvent.name }}</span>
-    <span class="small">({{ hemaEvent | eventDateRange }})</span>
-  </h2>
-  <h4 class="no-pad">{{ hemaEvent | eventCreator}}</h4>
-  <p>{{ hemaEvent.description }}</p>
+  hema event component works. 
 </div>
