--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,14 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a routerLink="/event-list">Events</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button"
+            aria-haspopup="true" aria-expanded="false" href="#">Events</a>
+          <ul class="dropdown-menu">
+            <li><a routerLink="/event-list">My Events</a></li>
+            <li><a routerLink="/create-event">Create Event</a></li>
+          </ul>
+        </li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
