--- a/src/app/hema-events/hema-event/hema-event.component.html
+++ b/src/app/hema-events/hema-event/hema-event.component.html
@@ -1,3 +1,14 @@
-<div>
-  hema event component works. 
+<div *ngIf="event" class="row">
+  <div class="col-sm-8 col-sm-offset-2">
+    <h1 class="row">
+      <span class="col-sm-10">
+        {{ event.name }} <br />
+        <small>{{ event.start_dt | date }}<span *ngIf="event.start_dt.getTime() != event.end_dt.getTime()"> - {{ event.end_dt | date }}</span></small>
+      </span>
+      <span class="col-sm-2">
+        <button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
+      </span>
+    </h1>
+    <div>{{ event.description }}</div>
+  </div>
 </div>
