Converting to Cognito authentication for login and registration. Not complete, tests will break.

--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -4,7 +4,7 @@
       <div class="form-group">
         <label for="username">Username</label>
         <input type="text" class="form-control" id="username" name="username"
-          [(ngModel)]="username" required validateUsernameAvailability pattern="\w{3,}" placeholder="Enter your desired username">
+          [(ngModel)]="username" required pattern="\w{3,}" placeholder="Enter your desired username">
       </div>
       <div class="form-group">
         <label for="email">Email</label>
